# SEE

front_end_frame_ts/: README.md  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
front_end_frame_ts/env/: .env.development
front_end_frame_ts/public/: config.js
front_end_frame_ts/src/: main.ts
front_end_frame_ts/src/api/: example.ts  index.ts  lru_cache.ts
front_end_frame_ts/src/components/: DynamicChart.vue  WrappedImage.vue
front_end_frame_ts/src/router/: index.ts
front_end_frame_ts/src/scripts/: LatencyCalculator.ts  MockDataClient.ts
front_end_frame_ts/src/stores/: counter.ts  index.ts
front_end_frame_ts/src/utils/: httpRequest.ts  index.ts  validation.ts
front_end_frame_ts/src/views/: HomeView.vue  Navigation.vue
lru/: Cargo.toml
lru/config/: config.toml
lru/src/: lib.rs
lru/src/http/: common.rs  data.rs  dtos.rs  mod.rs  router.rs
lru/src/lru/: cache.rs  item_size.rs  lru_cache.rs  mod.rs
